[package]
name = "jsonp"
version = "1.0.0"
authors = ["Bazaah <github@luxolus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", features = ["raw_value"] }
serde = "1.0"

[dev-dependencies]
pretty_assertions = "0.6"
